Fix button spacing issues

--- a/themes/default/assets/src/sass/common/general/temp.sass
+++ b/themes/default/assets/src/sass/common/general/temp.sass
@@ -151,3 +151,6 @@ button.card-footer-item
 
     &:hover
         color: $link-hover
+
+.field.has-addons .control:not(:last-child)
+    margin-right: -$control-border-width
